# accretive-computing-mas-framework

./: CMakeLists.txt  README.md  accretive_computing_paper.md  generate_pdf.py  pyproject.toml  render_math.py  restructure.py
.github/workflows/: publish.yml
examples/: supply_chain.py
include/: Agent.hpp  ContinuousSubstrate.hpp  LatentMicroAgent.hpp  MacroAgent.hpp  MicroAgent.hpp
src/cpp/: ContinuousSubstrate.cpp  LatentMicroAgent.cpp  MacroAgent.cpp  MicroAgent.cpp  bindings.cpp
src/python/accretive_mas/: __init__.py  llm.py
tests/: conftest.py  test_convergence.py  test_fractal.py  test_latent_topology.py  test_llm_tools.py  test_physics.py  test_physics_orchestrator.py  test_simulation.py  test_stress.py  test_supply_chain.py  test_use_case_consensus.py
viz/: visualize_topology.py
